# Irosql

./: .gitignore  Cargo.toml  README.md
formatter/: Cargo.toml
formatter/src/: comments.rs  formatter.rs  lib.rs  main.rs
formatter/tests/: format_local_variables.rs  format_select_query.rs
irosql/: Cargo.toml
irosql/src/: cli.rs  main.rs
language_server/: Cargo.toml
language_server/src/: config.rs  database.rs  lib.rs  main.rs
lexer/src/: token.rs
lexer/tests/: basic_lexer_test.rs
parser/: Cargo.toml
parser/src/: error.rs  expr_start.rs  lib.rs  operator.rs  visitor.rs
parser/src/ast/: expressions.rs  keyword.rs  mod.rs
parser/tests/: exec_statement.rs  insert_statement.rs  local_variable_statement.rs  select_statement.rs
repl/: Cargo.toml
repl/src/: main.rs  repl.rs
sql_formatter/: Cargo.toml
sql_formatter/src/: comments.rs  formatter.rs  lib.rs  main.rs  settings.rs
sql_formatter/tests/: format_local_variables.rs  format_select_query.rs
sql_lexer/: Cargo.toml
sql_lexer/src/: keyword.rs  lib.rs  token.rs
sql_lexer/tests/: basic.rs  basic_lexer_test.rs
sql_lsp/: Cargo.toml
sql_parser/: Cargo.toml
sql_parser/src/: ast.rs  error.rs  expr_start.rs  keywords.rs  lexer.rs  lexer_new.rs  lib.rs  operator.rs  parser_new.rs  token.rs  token_new.rs  visitor.rs
sql_parser/src/ast/: data_type.rs  expressions.rs  keyword.rs  mod.rs  utils.rs
sql_parser/tests/: exec_statement.rs  insert_statement.rs  local_variable_statement.rs  select_statement.rs
sql_repl/: Cargo.toml
sql_repl/src/: repl.rs
