[package]
name = "irosql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
parser = { path = "../parser" }
lexer = { path = "../lexer" }
formatter = { path = "../formatter" }
language_server = { path = "../language_server" }
