[package]
name = "language_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = { version = "0.12.3", features = ["default", "sql-browser-tokio"] }
tower-lsp = "0.20.0"
tokio = { version = "1.39.2", features = ["io-std", "rt", "macros"] }
dashmap = { version = "6.0.1", features = ["serde"] }
ropey = "1.6.1"
config = "0.14.0"
dirs = "5.0.1"
serde = "1.0.208"
parser = { path = "../parser" }
lexer = { path = "../lexer" }
